# OsmoPoly

./: CMakeLists.txt  README.md
src/: main.cpp
src/geodesic/: CMakeLists.txt  UTM.cpp  UTM.h  geodesic.cpp  geodesic.h
src/math/: CMakeLists.txt  hull.cpp  hull.h
src/model/: CMakeLists.txt  model.cpp  model.h  modelGPX.cpp  modelGPX.h  modelOSM.cpp  modelOSM.h  node.cpp  node.h
src/xml/: CMakeLists.txt  fileHandler.cpp  fileHandler.h
test/: dat1.gpx  dat2.gpx  dat3.gpx  gerade.gpx
